--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,10 @@
   <body>
     <load ="partials/header.html" />
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <nav>
+      <a href="./1-timer.html">1 Gallery</a>
+      <a href="./2-snackbar.html">2 Form</a>
+    </nav>
 
     <script type="module" src="./main.js"></script>
   </body>
